# betfairTradingAgent

./: README.md
betfairTradingAgent/: betfairTradingAgent.pyproj  setup_smoke.ps1  (+5 more)
betfairTradingAgent/sac_lstm_au_racing/: README.md  pyproject.toml  requirements.txt
betfairTradingAgent/sac_lstm_au_racing/configs/: env.au_preoff.yaml  env.replay.v9.train.yaml  env.replay.v9.val.yaml  env.replay.v9.yaml  eval.criteria.yaml  execution.paper.yaml  model.sac_lstm.small.yaml  pipeline.yaml  reward.shaping.yaml  train_v9_m5_profit_tuned.yaml
betfairTradingAgent/sac_lstm_au_racing/experiments/smoke/: metrics.csv
betfairTradingAgent/sac_lstm_au_racing/experiments/smoke/tb/SAC_1/: events.out.tfevents.1762653075.DESKTOP-UH5NJN0.31500.0
betfairTradingAgent/sac_lstm_au_racing/experiments/v9_replay_smoke/: metrics.csv  metrics_archive.csv  metrics_archive_1.csv
betfairTradingAgent/sac_lstm_au_racing/experiments/v9_replay_smoke/tb/SAC_1/: events.out.tfevents.1762660692.DESKTOP-UH5NJN0.18880.0
betfairTradingAgent/sac_lstm_au_racing/experiments/v9_replay_smoke/tb/SAC_2/: events.out.tfevents.1762662183.DESKTOP-UH5NJN0.32828.0
betfairTradingAgent/sac_lstm_au_racing/experiments/v9_train_m2_s0/: metrics.archive.csv  metrics.csv
betfairTradingAgent/sac_lstm_au_racing/src/cli/: build_gold.py  build_silver.py  eval.py  ingest.py  paper_trade.py  train.py
betfairTradingAgent/sac_lstm_au_racing/src/saclstm_au/envs/: au_preoff_env.py  au_replay_env_v9.py  wrappers.py
betfairTradingAgent/sac_lstm_au_racing/src/saclstm_au/training/: callbacks.py  train_sac_lstm.py
(+10 files in other folders)
